# thanos

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  OAUTH_TESTING.md  PROTOCOLS.md  README.md  WEEK3-4_COMPLETION.md  WEEK_1_2_COMPLETE.md  WEEK_3_4_PROGRESS.md  build.rs  build.zig  build.zig.zon  config.example.toml  docker-compose.yml  prometheus.yml  test_all_endpoints.sh  test_gemini.sh  thanos.toml
benchmarks/: README.md  cache_bench.zig
docs/: AI_CODE_REVIEW_ARCHITECTURE.md  ARCHITECTURE.md  CLIENT_INTEGRATION.md  HYBRID_CONFIGURATION.md  README.md  installation.md  providers.md
examples/: Boltfile.toml  README.md  basic_completion.zig  git_commit_msg.sh  hybrid-config.toml  streaming_completion.zig
examples/rust/: Cargo.toml  README.md  build.rs  grpc_client.rs  grpc_streaming.rs  http_client.rs  uds_client.rs
proto/: thanos.proto
release/: PKGBUILD  README.md  install.sh
release/arch/: PKGBUILD
release/deb/: README.md
release/docker/: Dockerfile  docker-compose.yml
release/fedora/: thanos.spec
release/linux/: install.sh  thanos.env.example  thanos.service
src/: cache.rs  cache.zig  circuit_breaker.rs  config.rs  config.zig  cost.zig  discovery.zig  errors.zig  health.rs  health.zig  lib.rs  main.rs  main.zig  metrics.rs  models_dev.rs  rate_limit.rs  retry.zig  root.zig  router.rs  router.zig  streaming.zig  thanos.zig  types.rs  types.zig
src/auth/: anthropic_oauth.rs  github_oauth.rs  keyring.rs  mod.rs  token_manager.rs
src/clients/: anthropic_client.zig  bolt_grpc_client.zig  github_copilot_client.zig  ollama_client.zig  omen_client.zig  openai_client.zig  xai_client.zig
src/plugin/: cabi.zig
src/providers/: anthropic.rs  gemini.rs  github_copilot.rs  mod.rs  ollama.rs  openai.rs  xai.rs
src/server/: grpc.rs  http.rs  http3.rs  mod.rs  uds.rs
tests/: README.md  integration_tests.rs  provider_tests.rs  test_omen_integration.sh  uds_tests.rs
