[package]
name = "thanos"
version = "0.1.0"
edition = "2024"
authors = ["GhostKellz <contact@ghostkellz.com>"]
description = "Universal AI Gateway - Next-gen centralized service for multi-provider AI inference"
license = "MIT"
repository = "https://github.com/ghostkellz/thanos"
keywords = ["ai", "llm", "gateway", "grpc", "realtime"]
categories = ["api-bindings", "web-programming"]

[dependencies]
# Async runtime (next-gen: io_uring on Linux)
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP/3 + HTTP/2 server (next-gen protocols)
axum = { version = "0.7", features = ["multipart", "http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "compression-br"] }
hyper = { version = "1.1", features = ["full", "http2"] }
hyper-util = "0.1"
h3 = "0.0.4"
h3-quinn = "0.0.5"
quinn = "0.11"

# gRPC server (high-performance, streaming)
tonic = { version = "0.11", features = ["gzip", "tls", "transport"] }
tonic-reflection = "0.11"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP clients (for provider APIs)
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli"] }

# OAuth / Auth (like OpenCode + zeke)
oauth2 = "4.4"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
keyring = "2.3"           # System keyring for OAuth tokens
url = "2.5"
urlencoding = "2.1"
opener = "0.7"             # Open browser for OAuth

# Config / Environment
config = "0.14"
dotenvy = "0.15"

# Logging / Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
async-stream = "0.3"
once_cell = "1.19"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "thanos"
path = "src/main.rs"

[lib]
name = "thanos"
path = "src/lib.rs"
