[package]
name = "thanos-examples"
version = "0.1.0"
edition = "2021"

# Examples for calling Thanos from Rust clients (like zeke)

[[example]]
name = "grpc_client"
path = "grpc_client.rs"

[[example]]
name = "grpc_streaming"
path = "grpc_streaming.rs"

[[example]]
name = "http_client"
path = "http_client.rs"

[[example]]
name = "uds_client"
path = "uds_client.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC client
tonic = "0.11"
prost = "0.12"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyperlocal = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

[build-dependencies]
tonic-build = "0.11"
